Corregido POST de compras
